# YACVAT

./: .gitignore  CMakeLists.txt  Makefile  annotations.cpp  annotations.h  app.cpp  app.h  imgui.ini  json.cpp  main.cpp  notofont.h  readme.md  rectangle.cpp  tool  version.h
application/: CMakeLists.txt  main.cpp  main_sdl_opengl.cpp
include/yacvat/: annotations.h  app.h  fontawesome.h  rectangle.h  vec2.h  version.h  yacvat_imgui_config.h
lib/: get_git_deps.sh
src/: CMakeLists.txt  annotations.cpp  app.cpp  fontawesome.cpp  notofont.cpp  rectangle.cpp
